Update and rename app.component.ts to app.component.html

--- a/app.component.html
+++ b/app.component.html
@@ -1,7 +1,7 @@
 <hello name="{{ name }}"></hello>
 <p>Start editing to see some magic happen :)</p>
 
-<div *ngIfNot="false">
+<div *ngIfNot="ifNotValue">
   <div *ngFor="let p of posts " class="post">
     <div class="title">{{p.title}}</div>
   </div>
